# binance_trading_bot

./: +  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  The Universal Tactics of Successful Trend Trading_ Finding Opportunity in Uncertainty{Brent Penfold}(September 1 2020, Wiley){106182236} libgen.li_pages_258_285.md  config.backup.phasef.json  config.json  config.phasef.smoke.json  list_stdout.txt  pyrightconfig.json  run_small_pdf_helpers.py
.agents/: CATALOG.md  CHANGELOG.md  README.md  package.json  skills_index.json
.agents/.claude-plugin/: marketplace.json  plugin.json
.agents/data/: aliases.json  bundles.json  catalog.json  editorial-bundles.json  plugin-compatibility.json
.claude/: launch.json  settings.local.json
.claude/commands/: src-review.md
.serena/: project.yml
cmake/: safe_copy_if_different.cmake
data/: qlib_predictions.db  risk_metrics.db  risk_metrics.db-shm  risk_metrics.db-wal
data/qlib_csv/: binance_1h.parquet  binance_1h_e2e_convert.parquet  binance_1h_e2e_convert_smoke.parquet  binance_1h_smoke.parquet  binance_1h_top20_convert_smoke.parquet
data/qlib_smoke/: debug_latest.json  klines_30m.csv  qlib_predictions.db-shm  qlib_predictions.db-wal
docs/: __init__.py
docs/comprehensive-reviews/: 2026-05-16-account-v1.0.md  2026-05-16-catalog-v1.0.md  2026-05-16-engine-v1.0.md  2026-05-16-orders-v1.0.md  2026-05-17-risk-v1.0.md  2026-05-19-risk-v2.0.md  2026-05-21-engine-v1.0.md  2026-05-21-engine-v2.0.md  2026-05-21-engine-v3.0.md  2026-05-21-orchestration-v1.0.md  2026-05-21-orchestration-v2.0.md  2026-05-21-orchestration-v3.0.md  2026-05-21-qlib-strategy-adapters-implementation-v1.0.md  2026-05-21-qlib-strategy-adapters-implementation-v1.1.md  2026-05-21-qlib-strategy-adapters-implementation-v1.2.md  2026-05-24-backtest-v1.0.md  2026-05-28-account-v2.0.md  2026-05-28-backtest-v2.0.md  2026-05-28-catalog-v2.0.md  2026-05-29-src-v1.0.md  2026-05-29-src-v1.1.md  2026-05-30-remediation-handoff.md  2026-06-02-candle-phase3-dataset-missing-asof-report.md  2026-06-02-take-profit-invalid-leverage-report.md
docs/design/: 2026-05-11-binance-futures-sdk-v1.0.md  2026-05-12-orders-layer-v1.1.md  2026-05-13-binance-futures-sdk-v1.0-compliance-review.md  2026-05-13-ec2-static-ip-infra-v1.0.md  2026-05-13-mql4-orders-map-v1.2-compliance-review.md  2026-05-13-mql4-orders-map-v1.2.md  2026-05-13-orders-layer-v1.1-compliance-review.md  2026-05-14-market-scanner-strategy-engine-implement.md  2026-05-14-market-scanner-strategy-engine-v1.0.md  2026-05-14-mql4-account-map-v1.0.md  2026-05-14-strategy-plugin-catalog-v1.0.md  2026-05-15-exposure-control-v1.0.md  2026-05-15-generic-trailing-stop-controller-v1.0.md  2026-05-15-warmup-parallelization-v1.0.md  2026-05-16-gemini-filter-autotune-v1.0.md  2026-05-16-gemini-filter-gate-v1.0.md  2026-05-16-gemini-filter-quota-cache-v1.0.md  2026-05-16-risk-analytics-module-v1.0.md  2026-05-16-strategy-golden_crossover-v1.0.md  2026-05-16-total-notional-guard-v1.0.md  2026-05-16-zip-strategy-symbol-work-queue-v1.0.md  2026-05-17-strategy-monthly_close_model-v1.0.md  2026-05-17-zip-strategy-symbol-work-queue-v2.0.md  2026-05-18-internal-library-index-v1.0.md  2026-05-18-loss-manager-v1.0.md  2026-05-19-strategy-dow-theory-v1.0.md  2026-05-19-strategy-ricardo_rules-v1.0.md  2026-05-20-qlib-integration-v1.0.md  2026-05-20-qlib-orchestration-v1.1.md  2026-05-20-risk-profile-v1.0.md  2026-05-21-qlib-strategy-adapters-v1.0.md  2026-05-21-qlib-strategy-adapters-v1.1.md  2026-05-21-qlib-strategy-adapters-v1.2.md  2026-05-23-backtest-parameter-optimizer-v1.1.md  2026-05-24-backtest-rest-backfilling-provider-v1.0.md  2026-05-24-gemini-shared-key-manager-v1.0.md  2026-05-24-gemini-shared-key-manager-v1.1.md  2026-05-26-take-profit-reconciler-v1.0.md  2026-06-02-ec2-socks5-auto-tunnel-supervisor-implementation-plan-v1.0.md  2026-06-02-ec2-socks5-auto-tunnel-supervisor-v1.0.md  (+1 more)
docs/development/: qlib-orchestration-tasks.md  setup-windows.md
docs/runbooks/: ec2-static-ip-deploy-runbook.md  qlib-runtime-state-runbook.md  strategy-design-runbook.md
infra/: _check_prereqs.ps1  _configure_aws_profile.ps1  _rewrite_env_lf.ps1  aws.env.local.example  deploy.sh  provision.sh  ssh-proxy.sh  teardown.sh  update-ssh-ip.sh
plugins/src/dow_theory/: CMakeLists.txt  strategy_dow_theory.cpp
plugins/src/gartley_day_crossover/: CMakeLists.txt  strategy_gartley_day_crossover.cpp
plugins/src/golden_crossover/: CMakeLists.txt  strategy_golden_crossover.cpp
plugins/src/qlib_model_signal/: CMakeLists.txt  strategy_qlib_model_signal.cpp
plugins/src/ricardo_rules/: CMakeLists.txt  strategy_ricardo_rules.cpp
plugins/src/trend_breakout/: CMakeLists.txt  strategy_trend_breakout.cpp
src/: binance_api.cpp  binance_api.h  context.cpp  context.h  logger.cpp  logger.h  main.cpp  trading_engine.cpp  trading_engine.h
tests/: test_account_service.cpp  test_atr_indicator.cpp  test_backtest_engine.cpp  test_backtest_gate_controller.cpp  test_batch_scheduler_thread.cpp  test_beta_calculator.cpp  test_binance_api.cpp  test_candle_scheduler_thread.cpp  test_catalog_reporter.cpp  test_donchian_5_20_crossover_plugin.cpp  test_dow_theory_plugin.cpp  test_equity_curve.cpp  test_exposure_controller.cpp  test_gartley_day_crossover_plugin.cpp  test_gemini_filter.cpp  test_gemini_range_proposer.cpp  test_golden_crossover_plugin.cpp  test_historical_window_provider.cpp  test_indicator_adapters.cpp  test_indicators.cpp  test_kline_cache.cpp  test_logger.cpp  test_loss_manager.cpp  test_market_scanner.cpp  test_model_publisher.cpp  test_monthly_close_model_plugin.cpp  test_mql4_account.cpp  test_mql4_phase_a.cpp  test_mql4_phase_b.cpp  test_mql4_phase_c.cpp  test_mql4_phase_d.cpp  test_mql4_phase_e.cpp  test_order_cap_controller.cpp  test_order_types.cpp  test_orders.cpp  test_orders_decimal.cpp  test_orders_id_generator.cpp  test_orders_journal.cpp  test_orders_mapper.cpp  test_orders_validator.cpp  (+38 more)
tools/: build_library_index.py  connect_ec2_socks.ps1  run_bot_with_tunnel.ps1  tunnel_lib.ps1  tunnel_status.ps1  tunnel_supervisor.ps1
(+387 files in other folders)
